fix: best gifts cards wrap fixes

--- a/assets/layouts/_bestGifts.scss
+++ b/assets/layouts/_bestGifts.scss
@@ -53,6 +53,8 @@
 .best-gifts__cards {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 12px;
 }
 
